--- a/.github/workflows/s3-cf.yml
+++ b/.github/workflows/s3-cf.yml
@@ -24,4 +24,4 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
             name: cloudformation-stack
-            template: template.yml
+            template: template.yaml
